# game_engine

./: .clang-format  .clang-format-bakup  .gitignore  main.cpp  main_single.cpp  meson.build  octree.py  octs.cpp  plotter.py  quad.cpp  z-order.txt
aydenstuff/: array.h  control.h  particle.h  particle_util.h  tags.h  utilities.h  vector.h
core/: apm_scratch.cpp  asserts.h  c_strings.h  dbg.h  debug.h  h5_wrapper.h  logging.h  math_utils.hpp  maths.h  mdspan_tests.hpp  memory.cpp  memory.h  nested_loops.h  npy_creator.h  panic.h  profiling.h  random.h  timer.h  timers.h  typelist.h  vanilla_em.py
cuda/: em_kernel.cu  em_kernel.cuh
data/: electron_Al0_impactIonz_crossSection.txt  main.py  particle_gen.py  pic_tests.py  plotter.py  sp_plotting.py  sp_processing.py  triforce.mplstyle  vanilla_em.py
electromagnetics/: array.h  bc_data.h  bc_data.hpp  bc_definitions.h  bc_functors.hpp  bcs.h  boundaries.h  boundary_conditions2d.h  bread.h  curl_operators.h  curls.h  diff_operators.hpp  electromagnetics.h  electromagnetics.hpp  electromagnetics.param  em_array.hpp  em_constants.hpp  em_data.cpp  em_data.h  em_data.hpp  em_definitions.h  em_definitions.hpp  em_emtpyarray.h  em_params.hpp  em_solver.cpp  em_solver.h  em_solver.hpp  em_sources.cpp  em_sources.h  em_sources.hpp  em_traits.h  em_updates.cpp  em_updates.h  em_updates.hpp  em_vec3.hpp  enums.h  fields.h  gpu_emdata.cuh  hillsvortex.hpp  offsets.h  (+7 more)
experimental/: ayden_scratch_2.cpp  expression_templates.h  iterator.h  nested_loops.h  schnieder.h
expr_templates/: expr_array.h  expr_ops.h
metrics/: metrics.cpp  metrics.hpp
old_em/: bc_definitions.h  boundaries.h  curl_operators.h  electromagnetics.h  em_data.h  em_definitions.h  em_solver.h  em_sources.h  em_traits.h  em_updates.h  offsets.h  tfsf.h
old_versions/: scratch1.cpp
params/: compute_type.hpp  em_params.hpp  metric_spec.hpp  og_program_params.hpp.bak  particle_params.hpp  particle_spec.hpp  program_params.hpp  sources_spec.hpp
particles/: apm.hpp  beam_sources.hpp  binary_channels.hpp  collisions.hpp  current_deposition.hpp  interpolation.hpp  particles.hpp  poisson.h  pusher.hpp  sources.hpp
pytriforce/: coil_functions.py  domain_params.py  geometry.py  particle_generation.py  utilities.py
scripts/: collisions.py  domain_params.py  electromagnetics.py  (+8 more)
tests/: 3d.py  LSI_coulomb.py  LSI_coulomb_0d.py  LSI_fusion.py  adams_lsi.py  adams_lsi_collisions.py  adams_lsi_fusion.py  al_ionization.py  aluminum_stopping.py  carbon_thermal_eq.py  cu_brem.py  domain_params.py  efield_only.py  force_free.py  free_effusion.py  fusion.py  harmonic_osc.py  hillvortex.py  ionization_rate.py  jdep_beam.py  lsi.py  lsi_collisions.py  lsi_fusion.py  lsi_small.py  lsi_smith.py  lsi_timing.txt  magnetic_mirror.py  meson.build  particle_generation.py  particle_wire.py  perp_fields.py  reduced_al_ionization.py  reduced_lsi.py  seinfeld_3d.py  single_particle.cpp  single_particle.py  sp_accel_test.cpp  sp_accel_test.py  sp_gyro_test.cpp  sp_gyro_test.py  (+6 more)
tests/adams_files/: simple_analytic_mirror_boris_commented.py  simple_mirror_gradB_curvature_drift_with_mirror_commented.py  static_exb_three_case_benchmark.py
tests/collision_tests/: al_ionization.py  carbon_thermal_eq.py  cold_boron_brem.py  cu_brem.py  fusion.py
tests/collision_tests/cross_section_data/: DD_nHe3_BH_eV_m2.txt  DD_pT_BH_eV_m2.txt  SB_G4_Z29_kdsdk_eV_m2.txt
tests/cross_section_data/: DT_nHe4_BH_eV_m2.txt  SB_G4_Z1_kdsdk_MeV_barns.csv  SB_G4_Z1_kdsdk_eV_m2.txt  SB_G4_Z29_kdsdk_MeV_barns.csv  SB_G4_Z29_norm_kdsdk_eV_m2.txt  SB_G4_Z2_kdsdk_MeV_barns.csv  SB_G4_Z2_kdsdk_eV_m2.txt  SB_G4_Z5_kdsdk_MeV_barns.csv  SB_G4_Z5_kdsdk_eV_m2.txt  Tentori_pB_eV_m2.txt  Tentori_pB_keV_mbarn.csv
tests/data/: effusion_eden.txt  effusion_electron_ke.txt  effusion_iden.txt  effusion_ion_ke.txt  efield_only_electron_KE.txt  efield_only_electron_pe.txt  efield_only_iden.txt  efield_only_ion_ke.txt  efield_only_ion_pe.txt  efield_only_total_particle_energy.txt  seinfeld-3d-lsp-fields-energy.txt  seinfeld-3d-lsp-particles-energy.txt  smith_lsi_electron_energy.csv  smith_lsi_field_energy.csv  smith_lsi_proton_energy.csv
tests/mikes_files/: DD_beam_target.py  Martinez_fig9b_data.csv  carbon_thermal_equilibration.py  cold_boron_bremss.py  crosssection_convert.py  cu_brems.py  thermonuclear_fusion.py
tests/old_tests/: LSI_coulomb.py  LSI_coulomb_0d.py  LSI_fusion.py  adams_lsi.py  adams_lsi_collisions.py  efield_only.py  force_free.py  free_effusion.py  harmonic_osc.py  jdep_beam.py  lsi.py  perp_fields.py  reduced_lsi.py  seinfeld_3d.py  uniform_B_field.py  uniform_E_field.py  updated_LSI.py
(+61 files in other folders)
